--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,6 @@
                 </configuration>
             </plugin>
 
-<!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
@@ -145,12 +144,11 @@
                             <goal>sign</goal>
                         </goals>
                         <configuration>
-                            <keyname>TODO</keyname>
+                            <keyname>E3F58E5C</keyname>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
--->
         </plugins>
     </build>
 </project>
