--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <developerConnection>scm:git:git@github.com:TakahikoKawasaki/nv-bluetooth.git</developerConnection>
         <url>git@github.com:TakahikoKawasaki/nv-bluetooth.git</url>
       <tag>HEAD</tag>
-  </scm>
+    </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -82,6 +82,15 @@
             </build>
         </profile>
     </profiles>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
