--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.neovisionaries</groupId>
     <artifactId>nv-bluetooth</artifactId>
-    <version>1.7</version>
+    <version>1.8-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
     <description>
@@ -29,7 +29,7 @@
         <connection>scm:git:git@github.com:TakahikoKawasaki/nv-bluetooth.git</connection>
         <developerConnection>scm:git:git@github.com:TakahikoKawasaki/nv-bluetooth.git</developerConnection>
         <url>git@github.com:TakahikoKawasaki/nv-bluetooth.git</url>
-      <tag>nv-bluetooth-1.7</tag>
+      <tag>HEAD</tag>
     </scm>
 
     <properties>
